fix: 🐛 github icon color in dark mode

--- a/packages/vite-plugin-book/src/component/Header.css
+++ b/packages/vite-plugin-book/src/component/Header.css
@@ -5,6 +5,7 @@
         rounded-14px;
 
     color: rgba(var(--neutral), 1);
+    fill: rgba(var(--neutral), 1);
 
     &:hover {
         background: rgba(var(--secondary), 0.2);
